<resources>
    <string name="app_name">Sinarmas</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sinarmas_hunter_app">Sinarmas Hunter App</string>
    <string name="hint_password">Password</string>
    <string name="or">OR</string>
    <string name="log_in_facebook">Log in with Facebook</string>
    <string name="email_text">Email</string>
    <string name="back">back</string>
    <string name="register_text">Register</string>
    <string name="sign_up_now_it_s_free">Sign up now, it\'s Free</string>
    <string name="hint_name">Name</string>
    <string name="prefix_number">+62</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="forgot_pasword_text">Forgot Password?</string>
    <string name="registered_phone_number_text">An SMS with the verification code\nhas been sent to your registered phone number</string>
    <string name="dummy_phone_number">+62 818 923 3221</string>
    <string name="edit_number">edit number</string>
    <string name="strip">-</string>
    <string name="call_me_text">Call Me</string>
    <string name="didn_t_receive_sms">Didn\'t receive SMS?</string>
    <string name="submit_text">Submit</string>
    <string name="tutorial_text">Tutorial</string>
    <string name="video_app_usage_text">Video App Usage</string>
    <string name="skip_tutorial_text">Skip tutorial</string>
    <string name="next_text">Next</string>
    <string name="lock_icon">lock icon</string>
    <string name="hint_reset_email">johndoe18@mail.com</string>
    <string name="lupa_kata_sandi_text">Lupa Kata Sandi</string>
    <string name="close_icon">close icon</string>
    <string name="link_perbarui_kata_sandi_sudah_dikirim_nmelalui_email_anda_silahkan_cek_email_nanda_text">Link perbarui kata sandi sudah dikirim\nmelalui email anda, Silahkan cek Email\nAnda.</string>
    <string name="ok_text">OK</string>
    <string name="play_button">play button</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sinarmas_logo">sinarmas logo</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="tugas_text">Tugas</string>
    <string name="insentif_text">Insentif</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="leaderboard_text">Leaderboard</string>
    <string name="tersurvey_text">Tersurvey</string>
    <string name="diproses_text">Diproses</string>
    <string name="tersedia_text">Tersedia</string>
    <string name="lihat_leaderboard_text">Lihat Leaderboard</string>
    <string name="tersedia_untuk_string">Tersedia untuk di Survey (%S)</string>
    <string name="survey_ke_string">Survey "%S"</string>
    <string name="riwayat_poin_text">Riwayat Poin</string>
    <string name="tukarkan_poin_insentif_text">Tukarkan Poin Insentif</string>
    <string name="title_activity_detail_task">Map</string>
    <string name="i_ve_arrived_text">I\'ve Arrived</string>
    <string name="survey_lokasi_text">Survey Lokasi</string>
    <string name="store_name">Store Name</string>
    <string name="address_text">Address</string>
    <string name="store_owner_text">Store Owner</string>
    <string name="category_text">Category</string>
    <string name="website_text">Website</string>
    <string name="phone_text">Phone</string>
    <string name="hours_text">Hours</string>
    <string name="done_text">Done</string>
    <string name="my_profile_text">My Profile</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="kontak_text">Kontak</string>
    <string name="handphone_text">Handphone</string>
    <string name="whatsapp_text">Whatsapp</string>
    <string name="info_tambahan_text">Info Tambahan</string>
    <string name="hunter_id_text">Hunter ID</string>
    <string name="tanggal_lahir_text">Tanggal Lahir</string>
    <string name="alamat_text">Alamat</string>
    <string name="pengaturan_text">Pengaturan</string>
    <string name="ubah_alamat_email_text">Ubah Alamat Email</string>
    <string name="tutup_akun_text">Tutup Akun</string>
    <string name="tambahkan_atau_ubah_email_text">Tambahkan atau ubah Email</string>
    <string name="ubah_kata_sandi_anda_text">Ubah kata sandi anda</string>
    <string name="ubah_kata_sandi_text">Ubah Kata Sandi</string>
    <string name="pelajari_lebih_lanjut_tentang_opsi_anda_dan_tutup_akun_nanda_jika_diinginkan_text">Pelajari lebih lanjut tentang opsi Anda, dan tutup akun Anda jika diinginkan</string>
    <string name="cara_penggunaan_text">Cara Penggunaan</string>
    <string name="tentang_hunter_app_text">Tentang Hunter App</string>
    <string name="keluar_text">Keluar</string>
    <string name="kebijakan_privasi_text">Kebijakan Privasi</string>
    <string name="discalimer_penolakan_text">Discalimer (Penolakan)</string>
    <string name="ketentuan_pengguna_text">Ketentuan Pengguna</string>
    <string name="notifikasi_text">Notifikasi</string>
    <string name="poin_saya_text">Poin Saya</string>
    <string name="selamat_anda_mendapatkan_text">Selamat Anda Mendapatkan</string>
    <string name="atas_survey_text">Atas Survey</string>
    <string name="lihat_detail_text">Lihat Detail</string>
    <string name="katalog_voucher_text">Katalog Voucher</string>
    <string name="poin_anda_text">Poin Anda</string>
    <string name="cashout_text">Cashout</string>
</resources>
