<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_edge"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back"
        android:src="@drawable/back_arrow"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="81dp"
        android:fontFamily="@font/avenir"
        android:text="@string/register_text"
        android:textColor="@color/sinarmas_red"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="127dp"
        android:fontFamily="@font/avenir"
        android:text="@string/sign_up_now_it_s_free"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="@color/custom_tint"
        android:fontFamily="@font/avenir"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:textColorHint="@color/custom_tint1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor"
        tools:targetApi="lollipop" />

    <LinearLayout
        android:id="@+id/staticLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="11dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name">

        <EditText
            android:id="@+id/prefixNumber"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/custom_tint"
            android:fontFamily="@font/avenir"
            android:hint="@string/prefix_number"
            android:inputType="phone"
            android:maxLines="1"
            android:textColorHint="@color/custom_tint1"
            tools:ignore="LabelFor"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/custom_tint"
            android:fontFamily="@font/avenir"
            android:hint="@string/phone_number_hint"
            android:inputType="phone"
            android:maxLines="1"
            android:textColorHint="@color/custom_tint1"
            tools:ignore="LabelFor"
            tools:targetApi="lollipop" />

    </LinearLayout>

    <EditText
        android:id="@+id/emailRegist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="11dp"
        android:backgroundTint="@color/custom_tint"
        android:fontFamily="@font/avenir"
        android:hint="@string/email_text"
        android:inputType="textWebEmailAddress"
        android:maxLines="1"
        android:textColorHint="@color/custom_tint1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/staticLinearLayout"
        tools:ignore="LabelFor"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="11dp"
        android:backgroundTint="@color/custom_tint"
        android:fontFamily="@font/avenir"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColorHint="@color/custom_tint1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailRegist"
        tools:ignore="LabelFor"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="56dp"
        android:layout_marginEnd="23dp"
        android:layout_marginStart="23dp"
        android:background="@drawable/rounded_button_background"
        android:fontFamily="@font/avenir"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/staticText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/screen_edge"
        android:layout_marginStart="92dp"
        android:fontFamily="@font/avenir"
        android:text="@string/already_have_an_account"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/signIn" />

    <TextView
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/screen_edge"
        android:layout_marginEnd="92dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/avenir"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/sinarmas_red"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/staticText"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>