<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pengaturan">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/staticPengaturanLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/custom_border">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_edge"
            android:scaleType="fitXY"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:background="@drawable/button_effect"
            android:contentDescription="@string/back"
            android:src="@drawable/back_arrow"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:text="@string/pengaturan_text"
            android:textColor="@color/text_color2"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="25dp"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/staticPlihanLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/staticPengaturanLayout"
        android:background="@drawable/custom_border">

        <TextView
            android:id="@+id/staticUbahEmail"
            android:text="@string/ubah_alamat_email_text"
            android:textSize="16sp"
            android:textColor="@color/sinarmas_red"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_effect"
            app:layout_constraintTop_toBottomOf="@id/staticInfo"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/hunterId"
            android:text="@string/tambahkan_atau_ubah_email_text"
            android:textSize="14sp"
            android:textColor="@color/text_color10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/staticUbahEmail"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="2dp"
            android:textStyle="bold"
            android:layout_marginStart="15dp"/>

        <ImageView
            android:id="@+id/border3"
            android:src="@drawable/border_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/hunterId"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/staticUbahSandi"
            android:text="@string/ubah_kata_sandi_text"
            android:textSize="16sp"
            android:textColor="@color/sinarmas_red"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_effect"
            app:layout_constraintTop_toBottomOf="@id/border3"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/tanggalLahir"
            android:text="@string/ubah_kata_sandi_anda_text"
            android:textSize="14sp"
            android:textColor="@color/text_color10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/staticUbahSandi"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="2dp"
            android:textStyle="bold"
            android:layout_marginStart="15dp"/>

        <ImageView
            android:id="@+id/border4"
            android:src="@drawable/border_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tanggalLahir"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/staticAlamat"
            android:text="@string/tutup_akun_text"
            android:textSize="16sp"
            android:textColor="@color/sinarmas_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_effect"
            app:layout_constraintTop_toBottomOf="@id/border4"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/alamat"
            android:text="@string/pelajari_lebih_lanjut_tentang_opsi_anda_dan_tutup_akun_nanda_jika_diinginkan_text"
            android:textSize="14sp"
            android:textColor="@color/text_color10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/staticAlamat"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="2dp"
            android:textStyle="bold"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="37dp"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/staticPlihanLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/background1">

        <TextView
            android:id="@+id/caraPenggunaan"
            android:text="@string/cara_penggunaan_text"
            android:textSize="18sp"
            android:textColor="@color/text_color10"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_effect"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"/>

        <ImageView
            android:id="@+id/border5"
            android:src="@drawable/border_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/caraPenggunaan"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/tentangApp"
            android:text="@string/tentang_hunter_app_text"
            android:textSize="18sp"
            android:textColor="@color/text_color10"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_effect"
            app:layout_constraintTop_toBottomOf="@id/border5"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"/>

        <ImageView
            android:id="@+id/border6"
            android:src="@drawable/border_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tentangApp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/kebijakanPrivasi"
            android:text="@string/kebijakan_privasi_text"
            android:textSize="18sp"
            android:textColor="@color/text_color10"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_effect"
            app:layout_constraintTop_toBottomOf="@id/border6"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"/>

        <ImageView
            android:id="@+id/border7"
            android:src="@drawable/border_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/kebijakanPrivasi"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/ketentuan"
            android:text="@string/ketentuan_pengguna_text"
            android:textSize="18sp"
            android:textColor="@color/text_color10"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_effect"
            app:layout_constraintTop_toBottomOf="@id/border7"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"/>

        <ImageView
            android:id="@+id/border8"
            android:src="@drawable/border_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ketentuan"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/disclaimer"
            android:text="@string/discalimer_penolakan_text"
            android:textSize="18sp"
            android:textColor="@color/text_color10"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_effect"
            app:layout_constraintTop_toBottomOf="@id/border8"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"/>

        <ImageView
            android:id="@+id/border9"
            android:src="@drawable/border_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/disclaimer"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/keluar"
            android:text="@string/keluar_text"
            android:textSize="18sp"
            android:textColor="@color/text_color10"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_effect"
            app:layout_constraintTop_toBottomOf="@id/border9"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>